Step.11-Exercise-Adding-Animation
(cherry picked from commit c603e916c6dc2d7f73e3e9f1eaa03d97381ae374)

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -24,53 +24,75 @@
     <fragment
         android:id="@+id/titleFragment"
         android:name="com.example.android.navigation.TitleFragment"
-        android:label="fragment_title"
-        tools:layout="@layout/fragment_title" >
+        android:label="@string/android_trivia"
+        tools:layout="@layout/fragment_title">
         <action
             android:id="@+id/action_titleFragment_to_gameFragment"
             app:destination="@id/gameFragment" />
+        <!-- TODO (03) Add the sliding animation to the titleFragment_to_gameFragment action
+             Go to the navigation editor and select slide_in_left for Enter and Pop Enter
+             and slide_in_right for the Exit and Pop Exit animations -->
+        <!-- TODO (02) Create slide_in_left animation in new file
+             Do this by right clicking on the anim folder with
+             New->Animation resource file -->
     </fragment>
     <fragment
         android:id="@+id/gameFragment"
         android:name="com.example.android.navigation.GameFragment"
-        android:label="fragment_game"
+        android:label="@string/android_trivia"
         tools:layout="@layout/fragment_game">
         <action
             android:id="@+id/action_gameFragment_to_gameOverFragment"
             app:destination="@id/gameOverFragment"
-            app:popUpTo="@id/gameFragment"
+            app:popUpTo="@+id/gameFragment"
             app:popUpToInclusive="true" />
+        />
+        <!-- TODO (01) Create fade_in animation in new file
+             Do this by right clicking on the anim folder with
+             New->Animation resource file -->
+        <!-- TODO (07) Add the fade in/out animation to the gameFragment to gameOverFragment action
+            Go to the navigation editor and select fade_in for Enter and Pop Enter
+            and fade_out for the Exit and Pop Exit animations -->
         <action
             android:id="@+id/action_gameFragment_to_gameWonFragment"
             app:destination="@id/gameWonFragment"
-            app:popUpTo="@id/gameFragment"
+            app:popUpTo="@+id/gameFragment"
             app:popUpToInclusive="true" />
+        <!-- TODO (04) Add the sliding animation to the gameFragment to gameWonFragment action
+             Go to the navigation editor and select slide_in_left for Enter and Pop Enter
+             and slide_in_right for the Exit and Pop Exit animations -->
     </fragment>
     <fragment
         android:id="@+id/gameWonFragment"
         android:name="com.example.android.navigation.GameWonFragment"
-        android:label="fragment_game_won"
+        android:label="@string/android_trivia"
         tools:layout="@layout/fragment_game_won">
         <action
             android:id="@+id/action_gameWonFragment_to_gameFragment"
             app:destination="@id/gameFragment"
-            app:popUpTo="@id/titleFragment" />
+            app:popUpTo="@+id/titleFragment"/>
         <argument
             android:name="numQuestions"
             app:argType="integer" />
         <argument
             android:name="numCorrect"
             app:argType="integer" />
+        <!-- TODO (05) Add the sliding animation to the gameWonFragment to gameFragment action
+             Go to the navigation editor and select slide_in_left for Enter and Pop Enter
+             and slide_in_right for the Exit and Pop Exit animations -->
     </fragment>
     <fragment
         android:id="@+id/gameOverFragment"
         android:name="com.example.android.navigation.GameOverFragment"
-        android:label="fragment_game_over"
+        android:label="@string/android_trivia"
         tools:layout="@layout/fragment_game_over">
         <action
             android:id="@+id/action_gameOverFragment_to_gameFragment"
             app:destination="@id/gameFragment"
-            app:popUpTo="@id/titleFragment" />
+            app:popUpTo="@+id/titleFragment" />
+        <!-- TODO (06) Add the sliding animation to the gameOverFragment to gameFragment action
+             Go to the navigation editor and select slide_in_left for Enter and Pop Enter
+             and slide_in_right for the Exit and Pop Exit animations -->
     </fragment>
     <fragment
         android:id="@+id/aboutFragment"
@@ -80,6 +102,6 @@
     <fragment
         android:id="@+id/rulesFragment"
         android:name="com.example.android.navigation.RulesFragment"
-        android:label="fragment_rules"
+        android:label="@string/title_trivia_rules"
         tools:layout="@layout/fragment_rules" />
 </navigation>
