--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,16 +17,20 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <fragment
-            android:id="@+id/titleFragment"
-            android:name="com.example.android.navigation.TitleFragment"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <!-- TODO (03) Replace the titleFragment with the navHostFragment
+                 Change the ID to myNavHostFragment
+                 Change the name = androidx.navigation.fragment.NavHostFragment -->
+            <!-- TODO (04) Add app:navGraph pointing to the @navigation/navigation resource -->
+            <!-- TODO (05) Add app:defaultNavHost = true -->
+            <fragment
+                android:id="@+id/titleFragment"
+                android:name="com.example.android.navigation.TitleFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
 
 </layout>
