--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -51,6 +51,14 @@
         android:name="com.example.android.navigation.GameWonFragment"
         android:label="fragment_game_won"
         tools:layout="@layout/fragment_game_won">
+        <!-- TODO (05) Add the numQuestions argument from the nav editor
+             Select the gameWonFragment in the nav editor.  Click the little triangle next to
+             arguments to expand the argument section.  Add the numQuestions argument with
+             integer type -->
+        <!-- TODO (06) Add the numCorrect argument from the nav editor
+             Select the gameWonFragment in the nav editor.  Click the little triangle next to
+             arguments to expand the argument section.  Add the numCorrect argument with
+             integer type -->
         <action
             android:id="@+id/action_gameWonFragment_to_gameFragment"
             app:destination="@id/gameFragment"
